# bleu-champ

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Corpus.hpp  Dynamic.hpp  Printer.hpp  bleu-champ.cpp
util/: CMakeLists.txt
